Archive2/3d/ef205644e747e9/output
main.cpp:4:4: error: 'f x' redeclared as different kind of symbol
 f(x);
    ^
main.cpp:1:14: note: previous declaration 'using x = int'
 using x = int;
              ^
