Archive2/3d/ef205644e747e9/main.cpp
using x = int;
using f = double;

f(x);

int main() {}
